th/css/style.css
/* ... */
@keyframes sk-rotatePlane {
  0% {
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
            transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
  50% {
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
  100% {
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } 
}

/*---------------------------------------
    Navigation Links section              
-----------------------------------------*/
.custom-navbar {
	margin-bottom: 0;
	background-color: #fffff;
	max-height: 100%;
}

/* Controls nav styles upon collapse (which is now permanent) */
.custom-navbar.top-nav-collapse {
	background: #254a79;
	box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
	padding: 0;
}

.custom-navbar .navbar-brand {
	height: auto;
	width: auto;
	max-height: 70px;
	max-width: 400px;
	line-height: 35px; 
	vertical-align: middle;
}

.custom-navbar .nav li a { 
	color: #66ccff;
}

.custom-navbar .nav li a,
.custom-navbar .nav li button {
	font-size: 16px;
	font-weight: 700;
	letter-spacing: 0.6px;
	text-transform: uppercase;
	line-height: 40px;
	transition: all 0.4s ease-in-out;
}

.custom-navbar .nav li a:hover {
    background: transparent;
    color: #00de0b;
}

.custom-navbar .navbar-nav > li > a:hover,
.custom-navbar .navbar-nav > li > a:focus {
	background-color: transparent;
}

#iconNav {
	color: #101010;
	font-size: 20px;
}

.custom-navbar .navbar-toggle {
	border: none;
	padding-top: 20px;
	background-color: transparent;
}

.custom-navbar .navbar-toggle .icon-bar {
    background: #ffffff;
    border-color: transparent;
}

.current { 
	text-decoration: underline;
}

@media (max-width: 991px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }

    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .navbar-text {
        float: none;
        margin: 15px 0;
    }
    /* since 3.1.0 */
    .navbar-collapse.collapse.in { 
        display: block!important;
    }
    .collapsing {
        overflow: hidden!important;
    }
}
	
/*---------------------------------------
   Footer section              
-----------------------------------------*/
footer {
	color: #ffffff;
	background: #254a79;
	background-attachment: fixed;
	padding-top: 2rem;
	padding-bottom: 2rem;
}


footer h1 {
	margin-bottom: 15px;
}

footer p {
	color: #ffffff;
}

footer br {
	display: none;
}

.legal-link {
	color: #ffffff;
}

.legal-link:hover {
	color: #66ccff;
}

@media(max-width:411px) {
	footer br {
		display: inline;
	}
	
}

/*--------------------------------------- Home Page Styles -----------------------------------------*/ 
/*---------------------------------------
    Home Hero Section              
-----------------------------------------*/

#intro {
	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/intro.jpg') 50% 0 repeat-y fixed;
	-webkit-background-size: cover;
	background-size: cover;
	height: 100vh;
	text-align: center;
	background-position: center center;
	color: #ffffff;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	     -webkit-align-items: center;
	      -ms-flex-align: center;
		  align-items: center;
}

#intro h1 {
	color: #ffffff;
}

#intro .btn-second {
	background: transparent;
	color: #ffffff;
	border-color: #ffffff;
	margin-right: 12px;
}

#intro .btn-second:hover {
	background: #ffffff;
	color: #101010;
	border-color: transparent;
}

.hero-break hr {
	color: #254a79;
	background-color: #254a79;
	border: 2px solid;
	border-radius: 3px;
	width: 100%;
}


@media(max-width: 991px) {
	
	#intro h1 {
		color: #254a79;
	}
	
	#intro .btn-second {
		background: transparent;
		color: #254a79;
		border-color: #254a79;
	}

	#intro .btn-second:hover {
		background: #254a79;
		color: #ffffff;
		border-color: transparent;
	}
}

/*---------------------------------------
   Overview  section              
-----------------------------------------*/
#overview {
	padding-top: 10rem;
  padding-bottom: 10rem;
}

/*---------------------------------------
    Products Section              
-----------------------------------------*/
#products h5 {
	color: #ffffff;	
}

#products .btn-main {
	color: #254a79;
}

#products .btn-main:hover {
	color: #66ccff;
}

#products {
    background: #254a79;
    color: #66ccff;
    padding-top: 5rem;
    padding-bottom: 5rem;
}

@media (max-width: 992px) {
  .product {
    margin-bottom: 45px;
  }
}

#icon {
  color: #66ccff;
	font-size: 48px;
}

/*---------------------------------------
   Partners Section              
-----------------------------------------*/
#partners {
	padding-top: 5rem;
	padding-bottom: 5rem;
	color: #111;
}

#partners img {
  margin-top: 18px;
	display: block;
	max-height: 100px;
	max-width: 300px;
	margin-left: auto;
	margin-right: auto;
}

#partners h3 {
	font-weight: 700;
	margin-bottom: 5rem;
}

/*---------------------------------------------
	Partner Types Section
---------------------------------------------*/
@media(min-width: 992px) {
	#ptnrTypes {
		background: url('../images/prtnrType.jpg') 50% 0 repeat-y fixed;
		background-size: cover;
		background-position: center center;
		color: #101010;
		padding-top: 5rem;
		padding-bottom: 5rem;
	}
}

@media(max-width: 991px) {
	#ptnrTypes {
		background: #b6e5fc;
	}
}

#ptnrTypes h1 {
	text-align: center;
}

#ptnrTypes h3 {
	color: #254a79;
	text-align: center;
}
/* ... */

